syntax = "proto3";

option go_package = "/communicate";

message CalulateRequest {
  string idCarring = 1;
  string idClient = 2;
}

message CalculateResponse {
  string id = 1;
  string name  = 2;
}

service LogisticCommunicate {
  rpc CalculateLogistic (CalulateRequest) returns (CalculateResponse) {};
}
